--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
 </head>
 <body>
 
-    <section>
-        <div>
-            <h1>Skip The Diet,Just Eat Healthy With Food Network</h1>
+
+    <section class="top banner flexible-container">
+
+        <div class="half-width">
+            <h1>Skip The Diet,Just  Eat <span class="orange-color"> Healthy </span> With <span class="orange-color">Food</span> Network</h1>
+            <p class="pragraph">Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a class="link-button" href="facebook.com" target="_blank">order food</a>
         </div>
-        <div></div>
+
+        <div class="half-width">
+            <img src="images/male/Hero Image.jpg">
+        </div>
+
     </section>
+
+
     
 </body>
 </html>
